kubernetes/7-statefulset-mule-worker-app.yaml
#########################################
# Worker Mule Application (statefulSet) #
#########################################

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mule-worker-app
  namespace: my-mule4-stack
  labels:
    app: mule-worker-app
spec:
  serviceName: mule-worker-app-service
  selector:
    matchLabels:
      app: mule-worker-app
  replicas: 2
  template:
    metadata:
      labels:
        # allow this container to be part of the load balanced mule-worker-app-service
        app: mule-worker-app
        # allow remote management by Spring Boot Admin server
        spring-boot-managed: "true"
    spec:
      containers:
        - image: docker.hawkore.com/k8s/spring-boot-mule4-runtime-ce:latest
          imagePullPolicy: "Never"
          name: mule-worker-app
          workingDir: /opt/mule/
          ports:
            - containerPort: 8081 # default mule HTTP connector port number.
            - containerPort: 8888 # Spring Boot management port (actuator)
          resources:
            limits:
              memory: "800Mi"
          volumeMounts:
            # mount shared volume to load Mule application
            - mountPath: /opt/mule/shared
              name: shared-storage
              readOnly: true
          readinessProbe:
            tcpSocket:
              port: 8888
            initialDelaySeconds: 90
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8888
            initialDelaySeconds: 120
            periodSeconds: 10
      restartPolicy: Always
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-storage-claim
